--- a/Assignment2/portfolio.html
+++ b/Assignment2/portfolio.html
@@ -27,7 +27,7 @@
                     <h1 class="display-6" style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; color: rgb(0, 0, 0);">Shaquib Wasif</h1>
                     
 
-                    <p class="lead description" style="font-family: cursive; color: rgb(6, 13, 102);">
+                    <p class="lead description" style="font-family: cursive; color: rgb(0,0,0);">
                         Hey there! This is Shaquib, a guy who doesn't really know why he's here..:))<br>
                         
                     </p>
@@ -41,7 +41,7 @@
                     <div class="row">
                         <div class="col-md-6">
                             <h1 class="display-6" style="color:rgb(27, 28, 30);">
-                                Departmental Information
+                                Personal Information
                             </h1>
                         </div>
                         <div class="col-md-6">
